hero background color fix on mobile

--- a/assets/css/partials/_typography.scss
+++ b/assets/css/partials/_typography.scss
@@ -209,6 +209,10 @@ hr {
 	body h1 {
 		font-size: 40px;
 	}
+
+	.hero::before {
+		background-size: cover;
+	}
 }
 
 #contact p,
