--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -858,6 +858,9 @@ hr {
 body h1 {
     font-size: 40px;
   }
+  .hero::before {
+    background-size: cover;
+  }
 }
 #contact p,
 #contact a {
